--- a/docs/style.css
+++ b/docs/style.css
@@ -922,3 +922,32 @@ footer .social-icons img:hover {
     text-align: left;
   }
 }
+
+.popup {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  padding: 16px 24px;
+  background: #fff5cc;
+  color: #fff;
+  background: #ffcc00;
+  border-radius: 12px;
+  box-shadow: 0 4px 14px rgb(0 0 0 / 0.5);
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+  font-size: 0.95rem;
+  font-weight: bold;
+  z-index: 1000;
+}
+
+.popup.active {
+  transform: translateX(0);
+}
+@media (max-width: 768px) {
+  .popup {
+    bottom: 10px;
+    left: 10px;
+    padding: 12px 18px;
+    font-size: 0.83rem;
+  }
+}
